Add hero section list

--- a/index.html
+++ b/index.html
@@ -55,6 +55,46 @@
 	</div><!-- End of container -->
 	</header><!-- End of site-header -->
 
+	<main class="site-main">
+		<div class="container">
+			<section class="hero">
+					<h1 class="hero-heading">Партнеры и предложения</h1>
+					<ul class="hero-list">
+						<li class="hero-item">
+							<a class="hero-link" href="#">Все партнеры</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Популярные</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Супермаркеты</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Кафе и рестораны</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Такси</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Красота</a>
+						</li>
+						<li class="hero-item active-hero-link">
+							<a class="hero-link" href="#">Электроника и бытовая техника</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Зоотовары</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">Кино и театр</a>
+						</li>
+						<li class="hero-item">
+							<a class="hero-link" href="#">...</a>
+						</li>
+					</ul>
+				</section><!-- End of hero -->
+		</div><!-- End of container -->
+	</main>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
